Prevent toasters, banners to interfere when not visibe + remove outline

--- a/src/styles.less
+++ b/src/styles.less
@@ -16,6 +16,10 @@ body, html {
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: none;
+}
+
 input, button {
     font-size: 18px;
 }
